# cca-foundations-portfolio

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  test_setup.py
project-1-rag/: README.md  ingest.ipynb  ingest.py  retrieve.py  schemas.py
project-1-rag/data/: chunks.jsonl
project-1-rag/data/chroma/: chroma.sqlite3
project-1-rag/tests/: test_schemas.py
