[project]
name = "claude-foundations"
version = "0.1.0"
description = "Claude foundations 5 projects "
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests", "*/tests"]
python_files = "test_*.py"
pythonpath = ["Project-1-RAG-Knowledge-Assistant"]